# SelectPointPairAdapter

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
